[gd_scene load_steps=11 format=1]

[ext_resource path="res://scripts/Inventory.gd" type="Script" id=1]
[ext_resource path="res://assets/panel.png" type="Texture" id=2]
[ext_resource path="res://addons/GodotSTM/simple_text_menu.gd" type="Script" id=3]
[ext_resource path="res://addons/GodotSTM/GodotSTM_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Pixel_Berry_08_84_Ltd.Edition.fnt" type="BitmapFont" id=5]
[ext_resource path="res://assets/puzzles/puzzle 417 sujo.png" type="Texture" id=6]
[ext_resource path="res://assets/puzzles/puzzle estante.png" type="Texture" id=7]
[ext_resource path="res://assets/puzzles/puzzle 417.png" type="Texture" id=8]
[ext_resource path="res://addons/GodotTIE/text_interface_engine.gd" type="Script" id=9]
[ext_resource path="res://addons/GodotTIE/GodotTIE_icon.png" type="Texture" id=10]

[node name="Inventory" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Panel" type="Patch9Frame" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 692.0
margin/top = 54.0
margin/right = 1017.0
margin/bottom = 556.0
texture = ExtResource( 2 )
patch_margin/left = 20
patch_margin/top = 30
patch_margin/right = 20
patch_margin/bottom = 30

[node name="menu" type="Control" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 37.0
margin/top = 29.0
margin/right = 37.0
margin/bottom = 66.0
script/script = ExtResource( 3 )
__meta__ = {
"_editor_icon": ExtResource( 4 )
}
options = ""
orientation = 1
offset = 6
options_font = ExtResource( 5 )
signal_argument = 1
initial_option = 0
cursor_side = 0
cursor_offset = 8
blinking_cursor_rate = 0.0
options_color = Color( 1, 1, 1, 1 )
cursor_color = Color( 1, 1, 1, 1 )
menu_enabled = true

[node name="Image" type="Node" parent="."]

[node name="Images" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="PanoSujo" type="TextureFrame" parent="Images"]

visibility/visible = false
rect/scale = Vector2( 0.9, 0.9 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 130.0
margin/top = 0.0
margin/right = 977.0
margin/bottom = 504.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="papelFrase" type="TextureFrame" parent="Images"]

visibility/visible = false
rect/scale = Vector2( 0.9, 0.9 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 138.0
margin/top = 65.0
margin/right = 985.0
margin/bottom = 569.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="PanoLimpo" type="TextureFrame" parent="Images"]

visibility/visible = false
rect/scale = Vector2( 0.9, 0.9 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 130.0
margin/top = 0.0
margin/right = 977.0
margin/bottom = 504.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="Dialog" type="Patch9Frame" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 28.0
margin/top = 421.0
margin/right = 991.0
margin/bottom = 584.0
texture = ExtResource( 2 )
patch_margin/left = 20
patch_margin/top = 4
patch_margin/right = 20
patch_margin/bottom = 4

[node name="TIE" type="ReferenceFrame" parent="Dialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 18.0
margin/top = 20.0
margin/right = 942.0
margin/bottom = 147.0
script/script = ExtResource( 9 )
__meta__ = {
"_editor_icon": ExtResource( 10 )
}
SCROLL_ON_MAX_LINES = true
BREAK_ON_MAX_LINES = true
AUTO_SKIP_WORDS = true
LOG_SKIPPED_LINES = true
SCROLL_SKIPPED_LINES = false
FONT = ExtResource( 5 )
PRINT_INPUT = true
BLINKING_INPUT = true
INPUT_CHARACTERS_LIMIT = -1

[connection signal="buff_end" from="Dialog/TIE" to="." method="_on_TIE_buff_end"]


